@@ -92,21 +92,21 @@
     <properties>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
         <java.version>1.8</java.version>
-        <kotlin.version>1.3.21</kotlin.version>
+        <kotlin.version>1.3.61</kotlin.version>
         <kotlin.compiler.incremental>true</kotlin.compiler.incremental>
         <junit.jupiter.version>5.5.0</junit.jupiter.version>
         <junit.platform.version>1.5.0</junit.platform.version>
         <dropwizard.version>1.3.7</dropwizard.version>
-        <swagger.version>1.5.21</swagger.version>
+        <swagger.version>1.6.0</swagger.version>
         <swagger.parser.version>1.0.39</swagger.parser.version>
         <springboot.version>2.2.0.RELEASE</springboot.version>
         <springfox.version>2.9.2</springfox.version>
         <jetty.version>9.4.12.v20180830</jetty.version>
-        <jersey.version>2.27</jersey.version>
+        <jersey.version>2.29.1</jersey.version>
         <javax.el.version>2.2.5</javax.el.version>
         <jackson.version>2.9.7</jackson.version>
-        <asm.version>7.0</asm.version>
-        <testcontainers.version>1.10.1</testcontainers.version>
+        <asm.version>7.2</asm.version>
+        <testcontainers.version>1.12.4</testcontainers.version>
         <antlr.version>4.7.2</antlr.version>
         <nlp.version>3.9.2</nlp.version>
         <dk.brics.automaton.version>1.11-8</dk.brics.automaton.version>
@@ -119,9 +119,11 @@
         <!--
             Use
 
-            mvn versions:display-dependency-updates
+            mvn versions:display-dependency-updates -DprocessDependencyManagement=false
 
-            to check for new versions
+            for plugins, use:
+
+            mvn versions:display-plugin-updates
         -->
 
         <dependencies>
@@ -212,12 +214,16 @@
             <dependency>
                 <groupId>com.google.inject</groupId>
                 <artifactId>guice</artifactId>
+                <!--
+                    We ll need to check when new version comes with fix for:
+                    https://github.com/google/guice/issues/1133
+                -->
                 <version>4.2.2</version>
             </dependency>
             <dependency> <!-- This is needed as Guice has no LifeCycle management -->
                 <groupId>com.netflix.governator</groupId>
                 <artifactId>governator</artifactId>
-                <version>1.17.8</version>
+                <version>1.17.10</version>
                 <exclusions>
                     <!--It looks like it uses quite a few old versions -->
                     <exclusion>
@@ -253,12 +259,12 @@
             <dependency>
                 <groupId>org.hibernate</groupId>
                 <artifactId>hibernate-validator</artifactId>
-                <version>6.0.13.Final</version>
+                <version>6.1.0.Final</version>
             </dependency>
             <dependency>
                 <groupId>com.google.code.gson</groupId>
                 <artifactId>gson</artifactId>
-                <version>2.8.5</version>
+                <version>2.8.6</version>
             </dependency>
             <dependency> <!-- Used to handle terminal/console inputs -->
                 <groupId>net.sf.jopt-simple</groupId>
@@ -499,7 +505,19 @@
             <dependency>
                 <groupId>org.flywaydb</groupId>
                 <artifactId>flyway-core</artifactId>
-                <version>5.2.1</version>
+                <version>6.1.3</version>
+            </dependency>
+
+            <!--   XML  -->
+            <dependency>
+                <groupId>javax.xml.bind</groupId>
+                <artifactId>jaxb-api</artifactId>
+                <version>2.3.1</version>
+            </dependency>
+            <dependency>
+                <groupId>org.glassfish.jaxb</groupId>
+                <artifactId>jaxb-runtime</artifactId>
+                <version>2.3.1</version>
             </dependency>
 
             <!-- test dependencies -->
@@ -524,7 +542,7 @@
             <dependency>
                 <groupId>io.rest-assured</groupId>
                 <artifactId>rest-assured</artifactId>
-                <version>3.2.0</version>
+                <version>4.1.2</version>
                 <scope>test</scope>
             </dependency>
             <dependency>
@@ -557,12 +575,19 @@
                 <!-- To run unit tests -->
                 <plugin>
                     <artifactId>maven-surefire-plugin</artifactId>
-                    <version>3.0.0-M3</version>
+                    <version>3.0.0-M4</version>
                     <configuration>
                         <forkCount>1</forkCount>
                         <redirectTestOutputToFile>true</redirectTestOutputToFile>
                         <rerunFailingTestsCount>2</rerunFailingTestsCount>
-                        <argLine>@{argLine} -Xms1024m -Xmx2048m</argLine>
+                        <!--
+                            @{argLine} is needed for JaCoCo
+                            -Djdk.attach.allowAttachSelf=true is needed for Java 9+
+                            TODO might not needed when using workaround like in ByteBuddy
+                            of creating an external process to do the Agent attachment
+                            https://github.com/raphw/byte-buddy/issues/295
+                        -->
+                        <argLine>@{argLine} -Xms1024m -Xmx2048m -Djdk.attach.allowAttachSelf=true</argLine>
                         <!-- Needed for some weird bug in JDK used in CircleCI-->
                         <useSystemClassLoader>false</useSystemClassLoader>
                     </configuration>
@@ -669,7 +694,7 @@
                 <plugin>
                     <groupId>org.apache.maven.plugins</groupId>
                     <artifactId>maven-shade-plugin</artifactId>
-                    <version>3.1.0</version>
+                    <version>3.2.1</version>
                 </plugin>
 
                 <!-- To sign Jar files before uploading them to Maven Central -->
